// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> Inverted prop error 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ac001a;
  border: none;
  color: #fff5f5;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Inverted prop neutral 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #424242;
  border: none;
  color: #f2f2f2;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Inverted prop primary 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #1250C4;
  border: none;
  color: #E5EDFC;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Inverted prop success 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #004D40;
  border: none;
  color: #dcedc8;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Inverted prop warning 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #d14900;
  border: none;
  color: #ffefd6;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Sizes large 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
  font-size: 18px;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Sizes medium 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Sizes small 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
  font-size: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins error 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #fff5f5;
  border: none;
  color: #ac001a;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins primary 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #E5EDFC;
  border: none;
  color: #1250C4;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins success 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #dcedc8;
  border: none;
  color: #004D40;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins warning 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffefd6;
  border: none;
  color: #d14900;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Stroked prop error 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #ac001a;
  color: #ac001a;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Stroked prop neutral 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #424242;
  color: #424242;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Stroked prop primary 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #1250C4;
  color: #1250C4;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Stroked prop success 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #004D40;
  color: #004D40;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Stroked prop warning 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #d14900;
  color: #d14900;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #424242;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 2`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #E5EDFC;
  border: none;
  color: #1250C4;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 3`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #dcedc8;
  border: none;
  color: #004D40;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 4`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffefd6;
  border: none;
  color: #d14900;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c7 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #d14900;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 5`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #fff5f5;
  border: none;
  color: #ac001a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c7 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

.c8 .c3 {
  font-size: 18px !important;
  color: #d14900;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #ac001a;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 6`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #424242;
  border: none;
  color: #f2f2f2;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c7 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

.c8 .c3 {
  font-size: 18px !important;
  color: #d14900;
}

.c9 .c3 {
  font-size: 18px !important;
  color: #ac001a;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #f2f2f2;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 7`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #1250C4;
  border: none;
  color: #E5EDFC;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c7 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

.c8 .c3 {
  font-size: 18px !important;
  color: #d14900;
}

.c9 .c3 {
  font-size: 18px !important;
  color: #ac001a;
}

.c10 .c3 {
  font-size: 18px !important;
  color: #f2f2f2;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #E5EDFC;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 8`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #004D40;
  border: none;
  color: #dcedc8;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c7 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

.c8 .c3 {
  font-size: 18px !important;
  color: #d14900;
}

.c9 .c3 {
  font-size: 18px !important;
  color: #ac001a;
}

.c10 .c3 {
  font-size: 18px !important;
  color: #f2f2f2;
}

.c11 .c3 {
  font-size: 18px !important;
  color: #E5EDFC;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #dcedc8;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 9`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #d14900;
  border: none;
  color: #ffefd6;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c7 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

.c8 .c3 {
  font-size: 18px !important;
  color: #d14900;
}

.c9 .c3 {
  font-size: 18px !important;
  color: #ac001a;
}

.c10 .c3 {
  font-size: 18px !important;
  color: #f2f2f2;
}

.c11 .c3 {
  font-size: 18px !important;
  color: #E5EDFC;
}

.c12 .c3 {
  font-size: 18px !important;
  color: #dcedc8;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #ffefd6;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 10`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ac001a;
  border: none;
  color: #fff5f5;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c7 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

.c8 .c3 {
  font-size: 18px !important;
  color: #d14900;
}

.c9 .c3 {
  font-size: 18px !important;
  color: #ac001a;
}

.c10 .c3 {
  font-size: 18px !important;
  color: #f2f2f2;
}

.c11 .c3 {
  font-size: 18px !important;
  color: #E5EDFC;
}

.c12 .c3 {
  font-size: 18px !important;
  color: #dcedc8;
}

.c13 .c3 {
  font-size: 18px !important;
  color: #ffefd6;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #fff5f5;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 11`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #424242;
  color: #424242;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

.c7 .c3 {
  font-size: 18px !important;
  color: #d14900;
}

.c8 .c3 {
  font-size: 18px !important;
  color: #ac001a;
}

.c9 .c3 {
  font-size: 18px !important;
  color: #f2f2f2;
}

.c10 .c3 {
  font-size: 18px !important;
  color: #E5EDFC;
}

.c11 .c3 {
  font-size: 18px !important;
  color: #dcedc8;
}

.c12 .c3 {
  font-size: 18px !important;
  color: #ffefd6;
}

.c13 .c3 {
  font-size: 18px !important;
  color: #fff5f5;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 12`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #1250C4;
  color: #1250C4;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

.c7 .c3 {
  font-size: 18px !important;
  color: #d14900;
}

.c8 .c3 {
  font-size: 18px !important;
  color: #ac001a;
}

.c9 .c3 {
  font-size: 18px !important;
  color: #f2f2f2;
}

.c10 .c3 {
  font-size: 18px !important;
  color: #E5EDFC;
}

.c11 .c3 {
  font-size: 18px !important;
  color: #dcedc8;
}

.c12 .c3 {
  font-size: 18px !important;
  color: #ffefd6;
}

.c13 .c3 {
  font-size: 18px !important;
  color: #fff5f5;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 13`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #004D40;
  color: #004D40;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

.c7 .c3 {
  font-size: 18px !important;
  color: #d14900;
}

.c8 .c3 {
  font-size: 18px !important;
  color: #ac001a;
}

.c9 .c3 {
  font-size: 18px !important;
  color: #f2f2f2;
}

.c10 .c3 {
  font-size: 18px !important;
  color: #E5EDFC;
}

.c11 .c3 {
  font-size: 18px !important;
  color: #dcedc8;
}

.c12 .c3 {
  font-size: 18px !important;
  color: #ffefd6;
}

.c13 .c3 {
  font-size: 18px !important;
  color: #fff5f5;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 14`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #d14900;
  color: #d14900;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c7 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #d14900;
}

.c8 .c3 {
  font-size: 18px !important;
  color: #ac001a;
}

.c9 .c3 {
  font-size: 18px !important;
  color: #f2f2f2;
}

.c10 .c3 {
  font-size: 18px !important;
  color: #E5EDFC;
}

.c11 .c3 {
  font-size: 18px !important;
  color: #dcedc8;
}

.c12 .c3 {
  font-size: 18px !important;
  color: #ffefd6;
}

.c13 .c3 {
  font-size: 18px !important;
  color: #fff5f5;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 15`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #ac001a;
  color: #ac001a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 18px;
}

.c5 .c3 {
  font-size: 18px !important;
  color: #424242;
}

.c6 .c3 {
  font-size: 18px !important;
  color: #1250C4;
}

.c7 .c3 {
  font-size: 18px !important;
  color: #004D40;
}

.c8 .c3 {
  font-size: 18px !important;
  color: #d14900;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px !important;
  color: #ac001a;
}

.c9 .c3 {
  font-size: 18px !important;
  color: #f2f2f2;
}

.c10 .c3 {
  font-size: 18px !important;
  color: #E5EDFC;
}

.c11 .c3 {
  font-size: 18px !important;
  color: #dcedc8;
}

.c12 .c3 {
  font-size: 18px !important;
  color: #ffefd6;
}

.c13 .c3 {
  font-size: 18px !important;
  color: #fff5f5;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Tag text
    <button
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Tag /> with bold prop 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  font-weight: bold;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> with only text prop / children 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
}

<div
  class="c0"
>
  <div
    class=""
  >
    example
  </div>
</div>
`;

exports[`<Tag /> with only text prop / children 2`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
}

<div
  class="c0"
>
  <div
    class=""
  >
    example
  </div>
</div>
`;

exports[`<Tag /> without props 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
}

<div
  class="c0"
>
  <div
    class=""
  >
    Tag text
  </div>
</div>
`;
